// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scrollable > basic rendering > clips content that overflows vertically 1`] = `
"Line 0   █
Line 1
Line 2"
`;

exports[`Scrollable > basic rendering > renders content that fits without scrolling 1`] = `
"Line 0
Line 1
Line 2"
`;

exports[`Scrollable > children fill full content width > flex slider in nested stacks fills scrollable content width 1`] = `
"╭─┬─────────────────
│◃│─────────────────
╰─┴─────────────────

AAAAAAAAAAAAAAAAAAAA"
`;

exports[`Scrollable > children fill full content width > progress bar fills scrollable content width 1`] = `
"████████████████████

AAAAAAAAAAAAAAAAAAAA"
`;

exports[`Scrollable > offset and onOffsetChange > sets initial offset via prop 1`] = `"██████────"`;
